syntax = "proto3";

option csharp_namespace = "WebAPI.GrpcServices";

service ProductSearchService {
    rpc GetProductLocation(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    string product_name = 1;
}

message ProductResponse {
    string warehouse_id = 1;
    string shelf_id = 2;
}